; ModuleID = '/home/carl/AnghaBench/i3/src/extr_ipc.c_ipc_shutdown.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_ipc.c_ipc_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@all_clients = common dso_local global i32 0, align 4
@SHUT_RDWR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipc_shutdown(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @ipc_send_shutdown_event(i32 %6)
  br label %8

8:                                                ; preds = %25, %2
  %9 = call i32 @TAILQ_EMPTY(i32* @all_clients)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  br i1 %11, label %12, label %29

12:                                               ; preds = %8
  %13 = call %struct.TYPE_4__* @TAILQ_FIRST(i32* @all_clients)
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %5, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %16, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %12
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @SHUT_RDWR, align 4
  %24 = call i32 @shutdown(i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %19, %12
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @free_ipc_client(%struct.TYPE_4__* %26, i32 %27)
  br label %8

29:                                               ; preds = %8
  ret void
}

declare dso_local i32 @ipc_send_shutdown_event(i32) #1

declare dso_local i32 @TAILQ_EMPTY(i32*) #1

declare dso_local %struct.TYPE_4__* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @shutdown(i32, i32) #1

declare dso_local i32 @free_ipc_client(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
